--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':Part3_8', ':part3_8_1', ':practice', ':Part2_4'
+include ':app', ':Part3_8', ':part3_8_1', ':practice', ':Part2_4', ':Part4_11'
