--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':3_UserInterface', ':4_Layout', ':17_SupportLibrary', ':18_MaterialDesign', ':practice'
+include ':3_UserInterface', ':4_Layout', ':17_SupportLibrary', ':18_MaterialDesign', ':practice', ':practice2'
